--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css" />
-    <title> Namaste React</title>
+    <title> React</title>
 </head>
 
 <body>
     <div id="root">
+        <h1>Root is here!</h1>
         <!-- <script>
             const heading = document.createElement("h1");
             heading.innerHTML = "Namaste JavaScript!"
@@ -18,9 +19,9 @@
             root.appendChild(heading);
         </script> -->
 
-        <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-        <script src="./App.js"></script>
+        <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+        <script type="module" src="./src/App.js"></script>
     </div>
 
 </body>
